# Athleia

./: .gitattributes  .gitignore  README.md  amplify.yml  start-services.ps1
services/assistant-service/: .env.example  .gitignore  pyproject.toml  requirements.txt
services/assistant-service/app/: main.py
services/assistant-service/app/agent/: intent.py  nodes.py  prompts.py  state.py  validator.py  workflow.py
services/assistant-service/app/api/v1/: chat_router.py  health_router.py  (+5 more)
services/assistant-service/app/cache/: semantic_cache.py
services/assistant-service/app/clients/: gateway_client.py
services/assistant-service/app/conversation/: manager.py  title_generator.py
services/assistant-service/app/core/: config.py  logging.py  metrics.py  security.py
services/assistant-service/app/llm/: base.py  router.py
services/assistant-service/app/memory/: conversation_memory.py  org_memory.py  user_memory.py
services/assistant-service/app/repositories/: assistant_repository.py
services/assistant-service/app/schemas/: chat.py  conversation.py  feedback.py  model.py  preference.py
services/assistant-service/app/tools/: __init__.py  base.py  registry.py
services/assistant-service/tests/: test_assistant.py
services/maintenance-service/: .gitignore  pyproject.toml
services/maintenance-service/app/: main.py
services/maintenance-service/app/agent/: nodes.py  state.py  workflow.py
services/maintenance-service/app/core/: config.py  logging.py
services/maintenance-service/app/domain/: enums.py  models.py
services/maintenance-service/app/engine/: pattern_engine.py
services/maintenance-service/app/llm/: factory.py
services/maintenance-service/app/repositories/: maintenance_repository.py
services/maintenance-service/app/tools/: maintenance_tools.py
services/maintenance-service/tests/: test_maintenance_service.py
shared/authenticaion/: .gitignore  pyproject.toml
shared/authenticaion/app/: main.py
shared/authenticaion/app/core/: config.py  email.py  logging.py  security.py
shared/authenticaion/app/domain/: enums.py  models.py
shared/authenticaion/app/repositories/: auth_repository.py
shared/authenticaion/tests/: test_auth_service.py
(+270 files in other folders)
