[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "athleia-assistant-service"
version = "1.0.0"
description = "Athleia.ai Enterprise AI Workforce Copilot & Assistant Service"
authors = [{ name = "Athleia AI Engineering Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.0.25",
    "langchain-core>=0.1.30",
    "sqlalchemy[asyncio]>=2.0.28",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0"
]
